--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "next start -p $PORT"
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
   
   },
   "author": "",
